--- a/pandoc/header.tex
+++ b/pandoc/header.tex
@@ -1,6 +1,7 @@
 % LuaLaTeX + ltjsarticle用の設定
 \usepackage{luatexja}
-\usepackage[hiragino-pron]{luatexja-preset}
+% フォントはluatexjaのデフォルトを使用
+
 \usepackage{geometry}
 \usepackage{fancyhdr}
 \usepackage{titlesec}
