--- a/pandoc/header.tex
+++ b/pandoc/header.tex
@@ -7,6 +7,8 @@
 \usepackage{titlesec}
 \usepackage{listings}
 \usepackage{xcolor}
+\usepackage{tcolorbox}
+\tcbuselibrary{breakable,skins}
 % hyperrefはpandocが自動で読み込むため削除
 \usepackage{booktabs}
 \usepackage{caption}
