fix: ヘッダー設定とスクリプトの修正 - pandoc/header.tex: twosideからsingleside対応のヘッダー設定に変更 - scripts/update_commit_date.sh: 日付更新パターンを簡潔な形式に修正

--- a/pandoc/header.tex
+++ b/pandoc/header.tex
@@ -30,9 +30,8 @@
 % ヘッダー・フッターの設定
 \pagestyle{fancy}
 \fancyhf{}
-\fancyhead[LE,RO]{\thepage}
-\fancyhead[LO]{\rightmark}
-\fancyhead[RE]{\leftmark}
+\fancyhead[R]{\thepage}
+\fancyhead[L]{\leftmark}
 \renewcommand{\headrulewidth}{0.4pt}
 
 % セクション見出しのスタイル
